--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-componentor",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Create react components easy",
   "main": "index.js",
   "repository": {
@@ -24,8 +24,5 @@
   "bugs": {
     "url": "https://github.com/sanjarbek-ismatov/react-componentor/issues"
   },
-  "homepage": "https://github.com/sanjarbek-ismatov/reactular#readme",
-  "dependencies": {
-    "reactular": "^0.1.2"
-  }
+  "homepage": "https://github.com/sanjarbek-ismatov/reactular#readme"
 }
